--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LearningToolbox">
+        android:theme="@style/Theme.LearningToolbox"
+        android:hardwareAccelerated="false">
         <activity
             android:name=".view.ui.activities.SplashScreenActivity"
             android:exported="true">
