--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.learningtoolbox">
 
     <application
-        android:allowBackup="true"
+        android:fullBackupOnly="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -21,7 +21,8 @@
         </activity>
         <activity
             android:name=".view.ui.activities.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="mainToolBox">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
